# Phi-Jupyter

./: README.md  main.py  pyproject.toml
ipython/startup/: 00-auto-import.py
jupyterlab/settings/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
jupyterlab/settings/@jupyterlab/completer-extension/: manager.jupyterlab-settings
jupyterlab/settings/@jupyterlab/lsp-extension/: plugin.jupyterlab-settings
jupyterlab/settings/@jupyterlab/notebook-extension/: tracker.jupyterlab-settings
jupyterlab/settings/catppuccin_jupyterlab/: plugin.jupyterlab-settings
jupyterlab/settings/jupyterlab_code_formatter/: settings.jupyterlab-settings
src/jupyter_utils/: __init__.py  installer.py  pretty.py
